cmake_minimum_required(VERSION 3.21)
project(Cryptor)
set(CMAKE_CXX_STANDARD 14)
add_executable(Cryptor ../src/main.cpp ../src/UnsignedInt128.hpp ../src/UnsignedInt128.cpp ../src/AES128.hpp ../src/AES128.cpp ../src/ECB.hpp ../src/ECB.cpp ../src/CTR.hpp ../src/CTR.cpp ../src/SHA256.hpp ../src/SHA256.cpp ../src/Cryptor.hpp ../src/Cryptor.cpp)
add_definitions(-Werror)
add_definitions(-O3)
find_package(OpenMP)
if (OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()